# GoHome

./: .gitignore  README.md  docker-compose.yml  install_dev.sh  pyproject.toml
bluetooth_sensors/: Untitled-1.json  bluetooth-sensors-restart.service  bluetooth-sensors.service  bluetooth-sensors.timer  config.yaml  main.py  run.sh  sift_client.py  tasks.py  test_zigbee2mqtt.py  zigbee2mqtt_client.py
bluetooth_sensors/sensors/: __init__.py  _ble_sensor.py  discovery.py  gvh5100.py  kasa.py  kasa_sensors.py  tesla_wall_connector.py  wave_plus.py
grafana/config/: grafana.ini
grafana/config/datasources/: prometheus.json
prometheus/: prometheus.yml  sd_node01.yml  sd_picotempexporter.yml
restapi/: Dockerfile  go.mod  main.go
src/bluetooth_sensors/: __init__.py  main.py  run.sh
src/bluetooth_sensors/sensors/: __init__.py
tempmonitor/exporter/: Dockerfile  go.mod  picotempexport.go  rootPage.html
tempmonitor/picoserver/: go.mod  main.go
